# cpp-project-creator

./: cpc  cpc.py  install.py  setup.py
template/: .clang-format  .gitignore  .ycm_extra_conf.py  Makefile.am  configure.ac
template/examples/: Makefile.am  example_main.cpp
template/src/: Makefile.am  main.cpp
template/tests/: Makefile.am
